--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.85MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-332.2KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.08MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.16MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.18MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-363.0KB/s(Youtube:不良林), server: usa006.369boy.com, port: 16001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa006.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: 173.82.212.149, port: 24552, type: vmess, uuid: 601d7be0-d6cc-4e98-d721-b83b7da6fec5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-161.8KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.13MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-406.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-5.26MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.61MB/s(Youtube:不良林), server: 20.222.101.175, port: 80, type: vmess, uuid: fa0702f4-8ec9-48e5-9b53-a0afb7c3717e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.101.175}}
+  - {name: 🇯🇵 日本-5.24MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-376.1KB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-376.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-376.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-376.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-376.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-376.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-376.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.8KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-376.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
