--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林), server: 152.67.102.225, port: 46360, type: vmess, uuid: 61fe4d4e-8c7e-4f2e-9b9f-49f38991be7d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.54MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇭🇰 香港-4.07MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 捷克-431.4KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-247.3KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇨🇳 中国-4.40MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: 173.82.212.149, port: 24552, type: vmess, uuid: 601d7be0-d6cc-4e98-d721-b83b7da6fec5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-848.3KB/s(Youtube:不良林), server: 152.70.236.51, port: 33156, type: vmess, uuid: 49526417-e201-4949-8055-81b0fb264be5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: 45.12.110.8, port: 36109, type: vmess, uuid: d7729364-2135-4af5-aa4f-e1f565a5c23e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-403.4KB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.67MB/s(Youtube:不良林), server: usa006.369boy.com, port: 16001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa006.369boy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.52MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.66MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.31MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
       - 捷克-431.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-848.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-403.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
       - 捷克-431.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-848.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-403.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
       - 捷克-431.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-848.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-403.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
       - 捷克-431.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-848.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-403.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
       - 捷克-431.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-848.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-403.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
       - 捷克-431.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-848.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-403.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
       - 捷克-431.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-848.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-403.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
